<resources>
    <string name="app_name">HiDev_Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_webinar">Webinar</string>
    <string name="title_loker">Lowongan Pekerjaan</string>
    <string name="daftar">DAFTAR</string>
    <string name="content1">"Temukan webinar berbagai kategori dan dapatkan informasi yang terupdate dengan fitur yang mudah dan efisien hanya di Iklanku"
</string>
    <string name="content2">"Telusuri semua lowongan pekerjaan dan kembangkan karir impianmu yang didukung dengan fitur yang mudah dan efisien hanya di Iklanku"
</string>
    <string name="deadline">Until, 24 Desember 2021</string>
</resources>