<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/banner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/title_webinar"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:text="@string/content1"
                android:textColor="@color/black"
                android:background="@color/bawaan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/title_loker"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:text="@string/content2"
                android:textColor="@color/black"
                android:background="@color/bawaan"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>