<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_webinar"
            android:textSize="36sp"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainGrid"
        android:rowCount="4"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:layout_weight="9"
        android:columnOrderPreserved="false" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="12dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="180dp"
                                android:layout_height="200dp"
                                android:background="@color/bawaan"
                                android:src="@drawable/webinar1"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="8dp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:text="Judul"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/content"
                                    android:textSize="12sp"
                                    android:textColor="@color/black"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="10dp"
                                    android:text="@string/deadline"
                                    android:textSize="6sp"/>
                                <Button
                                    android:layout_width="60dp"
                                    android:layout_height="40dp"
                                    android:backgroundTint="@color/bawaan"
                                    android:text="@string/daftar"
                                    android:textColor="@color/white"
                                    android:textSize="6sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="12dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="180dp"
                                android:layout_height="200dp"
                                android:background="@color/bawaan"
                                android:src="@drawable/webinar2"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="8dp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:text="Judul"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/content"
                                    android:textSize="12sp"
                                    android:textColor="@color/black"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="10dp"
                                    android:text="@string/deadline"
                                    android:textSize="6sp"/>
                                <Button
                                    android:layout_width="60dp"
                                    android:layout_height="40dp"
                                    android:backgroundTint="@color/bawaan"
                                    android:text="@string/daftar"
                                    android:textColor="@color/white"
                                    android:textSize="6sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="12dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="180dp"
                                android:layout_height="200dp"
                                android:background="@color/bawaan"
                                android:src="@drawable/webinar3"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="8dp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:text="Judul"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/content"
                                    android:textSize="12sp"
                                    android:textColor="@color/black"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="10dp"
                                    android:text="@string/deadline"
                                    android:textSize="6sp"/>
                                <Button
                                    android:layout_width="60dp"
                                    android:layout_height="40dp"
                                    android:backgroundTint="@color/bawaan"
                                    android:text="@string/daftar"
                                    android:textColor="@color/white"
                                    android:textSize="6sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="12dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="180dp"
                                android:layout_height="200dp"
                                android:background="@color/bawaan"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="8dp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:text="Judul"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/content"
                                    android:textSize="12sp"
                                    android:textColor="@color/black"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="10dp"
                                    android:text="@string/deadline"
                                    android:textSize="6sp"/>
                                <Button
                                    android:layout_width="60dp"
                                    android:layout_height="40dp"
                                    android:backgroundTint="@color/bawaan"
                                    android:text="@string/daftar"
                                    android:textColor="@color/white"
                                    android:textSize="6sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="12dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <ImageView
                                android:layout_width="180dp"
                                android:layout_height="200dp"
                                android:background="@color/bawaan"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="8dp">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold"
                                    android:text="Judul"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/content"
                                    android:textSize="12sp"
                                    android:textColor="@color/black"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="10dp"
                                    android:text="@string/deadline"
                                    android:textSize="6sp"/>
                                <Button
                                    android:layout_width="60dp"
                                    android:layout_height="40dp"
                                    android:backgroundTint="@color/bawaan"
                                    android:text="@string/daftar"
                                    android:textColor="@color/white"
                                    android:textSize="6sp"/>

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>
    </GridLayout>
</LinearLayout>